Created layout skeleton

--- a/index.html
+++ b/index.html
@@ -3,8 +3,74 @@
   <head>
     <meta charset="utf-8">
     <title>Sign</title>
+    <link rel="stylesheet" href="/public/assets/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
   </head>
   <body>
+    <header>
+
+    </header>
+
+    <div class="page-wrapper">
+      <div class="wrapper">
+        <div class="headline u-text-center u-margin-bottom-3">
+          <h1>Simple, pretty icons.</h1>
+          <a href="#" class="button">Download</a>
+        </div>
+      </div>
+
+      <div class="wrapper">
+
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              icon
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              icon
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              icon
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              icon
+            </div>
+          </div>
+        </div>
+
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              icon
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              icon
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              icon
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              icon
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
 
   </body>
 </html>
