Created first 8 icons.

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         <div class="grid">
           <div class="grid-item">
             <div class="icon u-text-center">
-              icon
+              <img src="/public/assets/images/note.svg" alt="note">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              icon
+              <img src="/public/assets/images/user.svg" alt="user">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              icon
+              <img src="/public/assets/images/desktop.svg" alt="desktop">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              icon
+              <img src="/public/assets/images/card.svg" alt="card">
             </div>
           </div>
         </div>
@@ -49,22 +49,22 @@
         <div class="grid">
           <div class="grid-item">
             <div class="icon u-text-center">
-              icon
+              <img src="/public/assets/images/mobile.svg" alt="mobile">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              icon
+              <img src="/public/assets/images/droplet.svg" alt="droplet">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              icon
+              <img src="/public/assets/images/speech.svg" alt="speech">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              icon
+              <img src="/public/assets/images/envelope.svg" alt="envelope">
             </div>
           </div>
         </div>
