Altered button styles

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
     <div class="page-wrapper">
       <div class="wrapper">
-        <div class="headline u-text-center u-margin-bottom-3">
+        <div class="u-text-center u-margin-bottom-2">
           <h1>Simple, pretty icons.</h1>
           <a href="#" class="button">Download</a>
+        </div>
+        <div class="u-margin-bottom-1 u-text-center">
+          <code>npm install sign</code>
         </div>
       </div>
 
