--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
     <div class="page-wrapper">
       <div class="wrapper">
-        <div class="u-text-center u-margin-bottom-2">
-          <h1>Simple, pretty icons.</h1>
-          <a href="#" class="button">Download</a>
+        <div class="u-text-center">
+          <h1>A collection of simple, subtle icons.</h1>
+          <a href="public/sign.zip" class="button">Download</a>
         </div>
-        <div class="u-margin-bottom-1 u-text-center">
+        <div class="u-margin-bottom-2 u-text-center">
           <code>npm install sign</code>
         </div>
       </div>
