Added new row to icon set

--- a/index.html
+++ b/index.html
@@ -72,6 +72,30 @@
           </div>
         </div>
 
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/heart.svg" alt="heart">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/search.svg" alt="search">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/check.svg" alt="check">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/add.svg" alt="add">
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
