Added new row of icons.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,30 @@
           </div>
         </div>
 
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/locked.svg" alt="locked">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/unlocked.svg" alt="unlocked">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/bar-chart.svg" alt="bar-chart">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/line-chart.svg" alt="line-chart">
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
