Added another row of icons

--- a/index.html
+++ b/index.html
@@ -121,6 +121,30 @@
           </div>
         </div>
 
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/activity.svg" alt="activity">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/menu.svg" alt="menu">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/delete.svg" alt="delete">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/trash.svg" alt="trash">
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
