Added another row of icons.

--- a/index.html
+++ b/index.html
@@ -145,6 +145,30 @@
           </div>
         </div>
 
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/keyboard.svg" alt="keyboard">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/no.svg" alt="no">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/location.svg" alt="location">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/window.svg" alt="window">
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
