Added arrow-right, arrow-left, login and logout.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="public/sign.zip" class="button">Download</a>
         </div>
         <div class="u-margin-bottom-2 u-text-center">
-          <code>npm install sign</code>
+          <code>Version 1.0.0</code>
         </div>
       </div>
 
@@ -165,6 +165,30 @@
           <div class="grid-item">
             <div class="icon u-text-center">
               <img src="/public/assets/images/window.svg" alt="window">
+            </div>
+          </div>
+        </div>
+
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/arrow-right.svg" alt="arrow-right">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/arrow-left.svg" alt="arrow-left">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/login.svg" alt="login">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/images/logout.svg" alt="logout">
             </div>
           </div>
         </div>
