Altered directory structure. Packaged icon set.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="wrapper">
         <div class="u-text-center">
           <h1>A collection of simple, subtle icons.</h1>
-          <a href="public/sign.zip" class="button">Download</a>
+          <a href="public/blouse.zip" class="button">Download</a>
         </div>
         <div class="u-margin-bottom-2 u-text-center">
           <code>Version 1.0.0</code>
@@ -29,46 +29,22 @@
         <div class="grid">
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/note.svg" alt="note">
+              <img src="/public/assets/icons/note.svg" alt="note">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/user.svg" alt="user">
+              <img src="/public/assets/icons/user.svg" alt="user">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/desktop.svg" alt="desktop">
+              <img src="/public/assets/icons/desktop.svg" alt="desktop">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/card.svg" alt="card">
-            </div>
-          </div>
-        </div>
-
-        <!-- row -->
-        <div class="grid">
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/mobile.svg" alt="mobile">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/droplet.svg" alt="droplet">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/speech.svg" alt="speech">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/envelope.svg" alt="envelope">
+              <img src="/public/assets/icons/card.svg" alt="card">
             </div>
           </div>
         </div>
@@ -77,46 +53,22 @@
         <div class="grid">
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/heart.svg" alt="heart">
+              <img src="/public/assets/icons/mobile.svg" alt="mobile">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/search.svg" alt="search">
+              <img src="/public/assets/icons/droplet.svg" alt="droplet">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/check.svg" alt="check">
+              <img src="/public/assets/icons/speech.svg" alt="speech">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/add.svg" alt="add">
-            </div>
-          </div>
-        </div>
-
-        <!-- row -->
-        <div class="grid">
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/locked.svg" alt="locked">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/unlocked.svg" alt="unlocked">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/bar-chart.svg" alt="bar-chart">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/line-chart.svg" alt="line-chart">
+              <img src="/public/assets/icons/envelope.svg" alt="envelope">
             </div>
           </div>
         </div>
@@ -125,46 +77,22 @@
         <div class="grid">
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/activity.svg" alt="activity">
+              <img src="/public/assets/icons/heart.svg" alt="heart">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/menu.svg" alt="menu">
+              <img src="/public/assets/icons/search.svg" alt="search">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/delete.svg" alt="delete">
+              <img src="/public/assets/icons/check.svg" alt="check">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/trash.svg" alt="trash">
-            </div>
-          </div>
-        </div>
-
-        <!-- row -->
-        <div class="grid">
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/keyboard.svg" alt="keyboard">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/no.svg" alt="no">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/location.svg" alt="location">
-            </div>
-          </div>
-          <div class="grid-item">
-            <div class="icon u-text-center">
-              <img src="/public/assets/images/window.svg" alt="window">
+              <img src="/public/assets/icons/add.svg" alt="add">
             </div>
           </div>
         </div>
@@ -173,22 +101,94 @@
         <div class="grid">
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/arrow-right.svg" alt="arrow-right">
+              <img src="/public/assets/icons/locked.svg" alt="locked">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/arrow-left.svg" alt="arrow-left">
+              <img src="/public/assets/icons/unlocked.svg" alt="unlocked">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/login.svg" alt="login">
+              <img src="/public/assets/icons/bar-chart.svg" alt="bar-chart">
             </div>
           </div>
           <div class="grid-item">
             <div class="icon u-text-center">
-              <img src="/public/assets/images/logout.svg" alt="logout">
+              <img src="/public/assets/icons/line-chart.svg" alt="line-chart">
+            </div>
+          </div>
+        </div>
+
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/activity.svg" alt="activity">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/menu.svg" alt="menu">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/delete.svg" alt="delete">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/trash.svg" alt="trash">
+            </div>
+          </div>
+        </div>
+
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/keyboard.svg" alt="keyboard">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/no.svg" alt="no">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/location.svg" alt="location">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/window.svg" alt="window">
+            </div>
+          </div>
+        </div>
+
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/arrow-right.svg" alt="arrow-right">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/arrow-left.svg" alt="arrow-left">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/login.svg" alt="login">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/logout.svg" alt="logout">
             </div>
           </div>
         </div>
