Moved css to folder. Added favicon

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="/public/assets/images/favicon.png" />
+    <meta property="og:image:secure_url" content="/public/assets/images/favicon.png" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:alt" content="A collection of simple, subtle icons." />
     <title>Blouse</title>
-    <link rel="stylesheet" href="/public/assets/main.css">
+    <link rel="stylesheet" href="/public/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
   </head>
   <body>
