Added bag, star, link and battery icon.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   </head>
   <body>
     <header>
-
+      <ul>
+        <li><a href="https://github.com/garybunofsky/blouse" target="_blank">Source</a></li>
+        <li><a href="https://www.npmjs.com/package/blouse" target="_blank">Version 1.1.0</a></li>
+      </ul>
     </header>
 
     <div class="page-wrapper">
@@ -25,7 +28,7 @@
           <a href="public/blouse.zip" class="button">Download</a>
         </div>
         <div class="u-margin-bottom-2 u-text-center">
-          <code>Version 1.1.0</code>
+          <code>npm install blouse</code>
         </div>
       </div>
 
@@ -195,6 +198,30 @@
           <div class="grid-item">
             <div class="icon u-text-center">
               <img src="/public/assets/icons/logout.svg" alt="logout">
+            </div>
+          </div>
+        </div>
+
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/bag.svg" alt="bag">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/star.svg" alt="star">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/link.svg" alt="link">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/battery.svg" alt="battery">
             </div>
           </div>
         </div>
