--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="/public/assets/images/favicon.png" />
-    <meta property="og:image:secure_url" content="/public/assets/images/favicon.png" />
+    <meta property="og:image" content="/public/assets/images/meta-image.png" />
+    <meta property="og:image:secure_url" content="/public/assets/images/meta-image.png" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1200" />
     <meta property="og:image:alt" content="A collection of simple, subtle icons." />
-    <title>Blouse</title>
+
+    <!-- seo -->
+    <meta name="author" content="Gary Bunofsky">
+    <meta name="description" content="Blouse | A collection of simple, subtle icons.">
+    <link rel="canonical" href="http://blouse.garybunofsky.com" />
+
+    <!-- twitter card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="http://blouse.garybunofsky.com" />
+    <meta name="twitter:creator" content="@garybunofsky" />
+    <meta name="twitter:title" content="Blouse" />
+    <meta name="twitter:description" content="A collection of simple, subtle icons." />
+    <meta name="twitter:image" content="/public/assets/images/meta-image.png" />
+
+    <title>Blouse | A collection of simple, subtle icons.</title>
+    
     <link rel="stylesheet" href="/public/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
   </head>
