Updated meta image

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <meta name="twitter:creator" content="@garybunofsky" />
     <meta name="twitter:title" content="Blouse" />
     <meta name="twitter:description" content="A collection of simple, subtle icons." />
-    <meta name="twitter:image" content="/public/assets/images/meta-image.png" />
+    <meta name="twitter:image" content="http://blouse.garybunofsky.com/public/assets/images/meta-image.png" />
 
     <title>Blouse | A collection of simple, subtle icons.</title>
-    
+
     <link rel="stylesheet" href="/public/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
   </head>
