--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="/public/assets/images/meta-image.png" />
-    <meta property="og:image:secure_url" content="/public/assets/images/meta-image.png" />
+    <meta property="og:image:url" content="http://blouse.garybunofsky.com/public/assets/images/meta-image.png" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1200" />
