Added tag, download, help, and ball icons.

--- a/index.html
+++ b/index.html
@@ -251,6 +251,30 @@
           </div>
         </div>
 
+        <!-- row -->
+        <div class="grid">
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/tag.svg" alt="tag">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/download.svg" alt="download">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/help.svg" alt="help">
+            </div>
+          </div>
+          <div class="grid-item">
+            <div class="icon u-text-center">
+              <img src="/public/assets/icons/ball.svg" alt="ball">
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
